HRMS/kubernates/springboot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service-b6aa7816-8002-4b22-bf6b-5b85b15f49b2
  namespace: 2e49f282-85d5-4866-af7d-8133a75e6769
spec:
  selector:
    app: springboot-app-b6aa7816-8002-4b22-bf6b-5b85b15f49b2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
