HRMS/kubernates/springboot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress-4c3ed3cd-20a8-4000-957c-1c96050e035f
  namespace: 46a4939c-9cb6-4f7e-b464-b2d196da7e70
  annotations:
    ngrok.com/ingress-mode: edge
  labels:
    app: springboot-app-4c3ed3cd-20a8-4000-957c-1c96050e035f
spec:
  ingressClassName: ngrok
  rules:
    - host: picked-apt-wombat.ngrok-free.app
      http:
        paths:
          - backend:
              service:
                name: springboot-service-4c3ed3cd-20a8-4000-957c-1c96050e035f
                port:
                  number: 80
            path: /graphiql
            pathType: Prefix
          - backend:
              service:
                name: springboot-service-4c3ed3cd-20a8-4000-957c-1c96050e035f
                port:
                  number: 80
            path: /graphql
            pathType: Prefix
